--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>World PokeMap Concept</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css" />
@@ -45,34 +45,35 @@
     padding: 10px;
     text-align: center;
     overflow: auto;
-}
-.sidebar.collapsed {
-    height: 200px;
-	margin-top: 50px;
-}
-.sidebar-tabs>ul>li {
-    margin-left: -13px !important;
-	}
-.sidebar-left .sidebar-tabs {
+    }
+    .sidebar.collapsed {
+        height: 200px;
+    	margin-top: 50px;
+    }
+    .sidebar-tabs>ul>li {
+        margin-left: -13px !important;
+    	}
+    .sidebar-left .sidebar-tabs {
+        height: 350px;
+    	}
+  	.sidebar-left .sidebar-content {
+  	height: 350px;
+  	}
+    .sidebar {
     height: 350px;
-	}
-	.sidebar-left .sidebar-content {
-	height: 350px;
-	}
-.sidebar {
-height: 350px;
-}
-p {
-    margin: 0 0 .5em 0 !important;
-}
-#header > h3 {
-color: #191919 !important;}
-.select2-dropdown {
-  z-index: 9999;
-}
+    }
+    p {
+        margin: 0 0 .5em 0 !important;
+    }
+    #header > h3 {
+    color: #191919 !important;}
+    .select2-dropdown {
+      z-index: 9999;
+    }
 
     </style>
     <script src="lib/jquery-3.1.1.min.js"></script>
+    <script src="lib/moment.js"></script>
     <script src="lib/select2.full.min.js"></script>
     <script src="lib/leaflet.js"></script>
     <script src="lib/ngeohash.js"></script>
@@ -151,10 +152,23 @@ color: #191919 !important;}
               Ultra Rare
             </label>
           </div>
+          <div class="slider" style="width:100%;height:30px;">
+            <label>
+              <input type="range" min="10" max="65" value="40" step="1" id="iconSize">
+              Icon Size: <span id="sizeVal">40</span>
+            </label>
+          </div>
+          <br>
           <div class="form-group">
             <label>
               <span><input type="number" id="notifyIV" min="0" max="100" data-bind="value:notifyRarity" />%</span>
               Notify of IV
+            </label>
+          </div>
+          <div class="form-group">
+            <label>
+              <select type="text" class="form-control" multiple="multiple" id="pokeNotify" value=""></select>
+              Notify of Pokemon
             </label>
           </div>
           <div class="form-group">
