--- a/index.html
+++ b/index.html
@@ -105,17 +105,7 @@
     position: inherit;
 	    margin-top: 45px;
 "></center>
-<div class="logo1">
-<br><h3 style="
-    font-size: 12.5px;
-    margin-top: -12%;
-    color: #353535;
-    margin-left: 1%;
-    "><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CH2K3ZYYNFVLS">Want faster load time? Get Pro</a>
-
-  </h3>
-
-</div></div>
+	</div>
 
 
 <div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1">Add Your Area / City</a></h1></div>
