--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 		   .sidebar {
             width: 300px;
         }
+	      .footer {
+		      z-index: 1000 !important;
+	      }
 		#header > center {
 		display: none;}
 
