--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 	</div>
 
 
-<div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1">Add Your Area / City</a></h1></div>
+<div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1"><i class="fa fa-map-marker" aria-hidden="true" style="
+    color: #ff5c5c !important;
+"></i> Add Your Area / City</a></h1></div>
 <h3><i class="fa fa-star" aria-hidden="true" style="
     color: #ff5c5c !important;
 "></i> <a href="https://pokejoin.com/stats">Nests &amp; Spawns</a></h3>
