--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 
 
 <div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1"><i class="fa fa-map-marker" aria-hidden="true" style="
-    color: #ff5c5c !important;
+    color: #0083ea !important;
+    font-size: 19px;
 "></i> Add Your Area / City</a></h1></div>
 <h3><i class="fa fa-star" aria-hidden="true" style="
     color: #ff5c5c !important;
