--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <h3><a href="https://forum.pokejoin.com/pokejoin-update/"><i class="fa fa-unlock-alt" aria-hidden="true" style="
     color: #ff5c5c !important;
 "></i> Unlock Pro</a></h3>
-
+<input id="pac-input" class="controls" type="text" placeholder="Enter a location">
       </header>
   <div id="sidebar" class="sidebar collapsed">
      <!-- Nav tabs -->
