--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="lib/leaflet.smoothmarkerbouncing.js"></script>
     <!-- <script src="lib/bootstrap3-typeahead.min.js"></script>
     <script src="lib/bootstrap-tokenfield.min.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </head>
 <body>
