--- a/pro.html
+++ b/pro.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>World PokeMap Concept</title>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60539517-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    <title>World PokeMap Pro</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
@@ -102,7 +112,7 @@
 <div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1">Add Your Area / City</a></h1></div>
 <h3><i class="fa fa-star" aria-hidden="true"></i> <a href="https://pokejoin.com/stats">Nests & Spawns</a></h3>
 <h3><a href="https://forum.pokejoin.com/faq/"><i class="fa fa-question-circle" aria-hidden="true"></i> FAQ</a></h3>
-<h3><a href="https://forum.pokejoin.com/pokejoin-update/">Unlock Pro</a></h3>
+<h3><a href="#">Welcome To Pro</a></h3>
 
       </header>
   <div id="sidebar" class="sidebar collapsed">
