--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>World PokeMap Concept</title>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-60539517-2', 'auto');
+  ga('send', 'pageview');
+  </script>
+    <title>WorldPokéMap</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.min.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="appIcons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="appIcons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="appIcons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="appIcons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="appIcons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="appIcons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="appIcons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="appIcons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="appIcons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="appIcons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="appIcons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="appIcons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="appIcons/favicon-16x16.png">
+    <link rel="manifest" href="appIcons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="appIcons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/leaflet.css" />
     <link rel="stylesheet" href="css/marker-cluster-default.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -33,7 +55,7 @@
 		#header > center {
 		display: none;}
 
-		#window {
+    #window {
     color: black !important;
     display: block;
     position: absolute;
@@ -52,25 +74,39 @@
     overflow: auto;
     }
     .sidebar.collapsed {
-        height: 350px;
-    	margin-top: 50px;
+        height: 200px;
+    	  margin-top: 50px;
     }
-    .sidebar-tabs>ul>li {
-        margin-left: -13px !important;
+    .sidebar-tabs>ul>li>a {
+        margin-left: -4px !important;
     	}
-     .sidebar-tabs>ul>li.active {
-	 color: #000;
-    background-color: #ffffff;
-}
     .sidebar-left .sidebar-tabs {
         height: 350px;
     	}
   	.sidebar-left .sidebar-content {
-  	height: 350px;
+  	   height: 350px;
   	}
+    .sidebar-left {
+      height:200px;
+    }
     .sidebar {
-    height: 350px;
-	    margin-top: 50px;
+      height: 350px;
+    }
+    @media only screen and (max-device-width: 480px) {
+      #pac-input {
+        margin-top:-10px
+      }
+    }
+    @media only screen and (min-device-width: 480px) {
+      .sidebar {
+        margin-top: 50px !important;
+      }
+      #pac-input {
+        margin-top:5px;
+      }
+      .leaflet-control-zoom {
+        margin-bottom: 50px !important;
+      }
     }
     p {
         margin: 0 0 .5em 0 !important;
@@ -80,7 +116,9 @@
     .select2-dropdown {
       z-index: 9999;
     }
-
+    .select2 {
+      width: 200px !important
+    }
     </style>
     <script src="lib/jquery-3.1.1.min.js"></script>
     <script src="lib/moment.js"></script>
@@ -96,46 +134,53 @@
     <script src="lib/leaflet.smoothmarkerbouncing.js"></script>
     <!-- <script src="lib/bootstrap3-typeahead.min.js"></script>
     <script src="lib/bootstrap-tokenfield.min.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+    <script>
+    function initSearch() {
+      var input = (document.getElementById('pac-input'));
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      autocomplete.addListener('place_changed', function() {
+        var place = autocomplete.getPlace();
+        var latlng = L.latLng([place['geometry']['location'].lat(),place['geometry']['location'].lng()])
+        map.setView(latlng,14)
+        searchMarker.setLatLng(latlng)
+        if (!map.hasLayer(searchMarker)) {
+          searchMarker.addTo(map)
+        }
+        search()
+      })
+    }
+    </script>
 </head>
 <body>
 <header id="header">
 
 
-<center><img src="https://images-1.discordapp.net/.eJwFwUsKwyAQANC7eABnYnUSc4SSVQPdixEjxA86XZSSu_e9n_j0S6ziZG5jBTjS8LUfcnDtLgYZa41XcC0N6WsGx-z8mUPhAQqtXiYyZrYPtGgIQWnSBmc9aSJSC1qC13PbXeHUQ_6-lWwlivsP_skk_w.xmpY0DR7hXVd3hmbv38gMdv4sNk?width=396&height=300" style="
-    width: 80px;
-    position: inherit;
-	    margin-top: 45px;
+<center><img src="images/RJLSantiremyV2.png" style="
+    width: 60px;
+    position: static;
+	    margin-top: 10px;
 "></center>
 	</div>
-
 
 <div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1"><i class="fa fa-map-marker" aria-hidden="true" style="
     color: #0083ea !important;
     font-size: 19px;
 "></i> Add Your Area / City</a></h1></div>
-<h3><i class="fa fa-star" aria-hidden="true" style="
-    color: #ff5c5c !important;
-"></i> <a href="https://pokejoin.com/stats">Nests &amp; Spawns</a></h3>
-<h3><a href="https://forum.pokejoin.com/faq/"><i class="fa fa-question-circle" aria-hidden="true" style="
-    color: #ff5c5c !important;
-"></i> FAQ</a></h3>
-<h3><a href="https://forum.pokejoin.com/pokejoin-update/"><i class="fa fa-unlock-alt" aria-hidden="true" style="
-    color: #ff5c5c !important;
-"></i> Unlock Pro</a></h3>
+<h3><i class="fa fa-star" aria-hidden="true" style="color: #ff5c5c !important;"></i> <a href="https://pokejoin.com/stats">Nests &amp; Spawns</a></h3>
+<h3><a href="https://forum.pokejoin.com/faq/"><i class="fa fa-question-circle" aria-hidden="true" style="color: #ff5c5c !important;"></i> FAQ</a></h3>
+<h3><a href="https://forum.pokejoin.com/pokejoin-update/"><i class="fa fa-unlock-alt" aria-hidden="true" style="color: #ff5c5c !important;"></i> Unlock Pro</a></h3>
 <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
       </header>
-  <div id="sidebar" class="sidebar collapsed">
+  <div id="sidebar" class="sidebar collapsed" style="margin-top:7.5em;">
      <!-- Nav tabs -->
      <div class="sidebar-tabs">
          <ul role="tablist">
              <li><a href="#options" role="tab"><i class="fa fa-gear"></i></a></li>
              <li><a href="javascript:;" id="location" role="tab" target="_blank"><i class="fa fa-location-arrow"></i></a></li>
              <li><a href="https://blog.worldpokemap.com"" role="tab"><i class="fa fa-money"></i></a></li>
-             <li><a href="https://twitter.com/soflopokego" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
-			 <li><a href="https://www.facebook.com/PokeJoin/" role="tab" target="_blank"><i class="fa fa-facebook"></i></a></li>
-
+             <li><a href="https://twitter.com/worldpokemap" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
+             <li><a href="https://www.facebook.com/PokeJoin/" role="tab" target="_blank"><i class="fa fa-facebook"></i></a></li>
          </ul>
      </div>
 
@@ -188,14 +233,14 @@
           </div>
           <div class="form-group">
             <label>
-              <select type="text" class="form-control" multiple="multiple" id="pokeNotify" value=""></select>
-              Notify of Pokemon
+              <select type="text" class="form-control" multiple="multiple" id="pokeNotify" class="pokemonSelect" value=""></select>
+              <br>Notify of Pokemon
             </label>
           </div>
           <div class="form-group">
             <label>
-              <select type="text" class="form-control" multiple="multiple" id="pokeHide" value=""></select>
-              Hide Pokemon
+              <select type="text" class="form-control" multiple="multiple" id="pokeHide" class="pokemonSelect" value=""></select>
+              <br>Hide Pokemon
             </label>
           </div>
 
@@ -291,5 +336,7 @@ margin-top: -30px;
 </center></div>
 </div>
 <script src="lib/map.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
+
 
 </body>
