--- a/pro.html
+++ b/pro.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>World PokeMap Concept</title>
+  <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-60539517-2', 'auto');
+ga('send', 'pageview');
+</script>
+    <title>WorldPokéMap Pro</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.min.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="appIcons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="appIcons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="appIcons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="appIcons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="appIcons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="appIcons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="appIcons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="appIcons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="appIcons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="appIcons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="appIcons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="appIcons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="appIcons/favicon-16x16.png">
+    <link rel="manifest" href="appIcons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="appIcons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/leaflet.css" />
     <link rel="stylesheet" href="css/marker-cluster-default.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -48,19 +70,41 @@
     }
     .sidebar.collapsed {
         height: 200px;
-    	margin-top: 50px;
+    	  margin-top: 50px;
     }
-    .sidebar-tabs>ul>li {
-        margin-left: -13px !important;
+    .sidebar-tabs>ul>li>a {
+        margin-left: -4px !important;
     	}
     .sidebar-left .sidebar-tabs {
         height: 350px;
     	}
   	.sidebar-left .sidebar-content {
-  	height: 350px;
+  	   height: 350px;
   	}
+    .sidebar-left {
+      height:200px;
+    }
     .sidebar {
-    height: 350px;
+      height: 350px;
+    }
+    @media only screen and (max-device-width: 480px) {
+      #pac-input {
+        margin-top:-10px
+      }
+    }
+    @media only screen and (min-device-width: 480px) {
+      .sidebar {
+        margin-top: 50px !important;
+      }
+      #pac-input {
+        margin-top:5px;
+      }
+      .leaflet-control-zoom {
+        margin-bottom: 50px !important;
+      }
+      #header > center {
+        display:none;
+      }
     }
     p {
         margin: 0 0 .5em 0 !important;
@@ -69,6 +113,9 @@
     color: #191919 !important;}
     .select2-dropdown {
       z-index: 9999;
+    }
+    .select2 {
+      width: 200px !important
     }
 
     </style>
@@ -86,33 +133,50 @@
     <script src="lib/leaflet.smoothmarkerbouncing.js"></script>
     <!-- <script src="lib/bootstrap3-typeahead.min.js"></script>
     <script src="lib/bootstrap-tokenfield.min.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+    <script>
+    function initSearch() {
+      var input = (document.getElementById('pac-input'));
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      autocomplete.addListener('place_changed', function() {
+        var place = autocomplete.getPlace();
+        var latlng = L.latLng([place['geometry']['location'].lat(),place['geometry']['location'].lng()])
+        map.setView(latlng,14)
+        searchMarker.setLatLng(latlng)
+        if (!map.hasLayer(searchMarker)) {
+          searchMarker.addTo(map)
+        }
+        search()
+      })
+    }
+    </script>
+
 </head>
 <body>
 <header id="header">
-       <div class="logo">PokéJoin </div>
+       <!-- <div class="logo">PokéJoin </div> -->
 
-<img src="https://images-2.discordapp.net/.eJwFwe0NgyAQANBdGIC7IseHMzT91QUIEjRRj8CZNGnc3ff-6uq7mtUq0sYMsGwjc1_0EO6pFl2Z615S24bOfEASSXk9yikDDEYbXo7IxwkjkkMw1llCP3nEgMFES_Dhb_nJmyvrdlZ1P27iI8A.dkdSgMI9w0R9peV9UaDEqJmKQiE?width=300&amp;height=300" style="
-    width: 40px;
-    position: inherit;
-	    margin-top: 6px;
-">
+<center><img src="images/RJLSantiremyV2.png" style="
+    width: 60px;
+    position: static;
+	    margin-top: 10px;
+"></center>
 </div></div>
 <div class="mobilehide1"><h1><a href="https://forum.pokejoin.com/get-your-area-covered/" class="1">Add Your Area / City</a></h1></div>
 <h3><i class="fa fa-star" aria-hidden="true"></i> <a href="https://pokejoin.com/stats">Nests & Spawns</a></h3>
 <h3><a href="https://forum.pokejoin.com/faq/"><i class="fa fa-question-circle" aria-hidden="true"></i> FAQ</a></h3>
-<h3><a href="https://forum.pokejoin.com/pokejoin-update/">Unlock Pro</a></h3>
+<h3><a href="#">Welcome To Pro</a></h3>
+<input id="pac-input" class="controls" type="text" placeholder="Enter a location">
 
       </header>
-  <div id="sidebar" class="sidebar collapsed">
+  <div id="sidebar" class="sidebar collapsed" style="margin-top:7.5em;">
      <!-- Nav tabs -->
      <div class="sidebar-tabs">
          <ul role="tablist">
              <li><a href="#options" role="tab"><i class="fa fa-gear"></i></a></li>
              <li><a href="javascript:;" id="location" role="tab" target="_blank"><i class="fa fa-location-arrow"></i></a></li>
              <li><a href="https://blog.worldpokemap.com"" role="tab"><i class="fa fa-money"></i></a></li>
-             <li><a href="https://twitter.com/soflopokego" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
+             <li><a href="https://twitter.com/worldpokemap" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
 			 <li><a href="https://www.facebook.com/PokeJoin/" role="tab" target="_blank"><i class="fa fa-facebook"></i></a></li>
 
          </ul>
@@ -168,13 +232,13 @@
           <div class="form-group">
             <label>
               <select type="text" class="form-control" multiple="multiple" id="pokeNotify" value=""></select>
-              Notify of Pokemon
+              <br>Notify of Pokemon
             </label>
           </div>
           <div class="form-group">
             <label>
               <select type="text" class="form-control" multiple="multiple" id="pokeHide" value=""></select>
-              Hide Pokemon
+              <br>Hide Pokemon
             </label>
           </div>
 
@@ -235,40 +299,9 @@ margin-top: -30px;
     </div>
   <div id="map" class="sidebar-map"></div>
 </div>
-<div class="mobilehide1"><div class="ads2"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- LONGv3 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:160px;height:600px"
-     data-ad-client="ca-pub-4882649856459352"
-     data-ad-slot="4877166021"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div></div>
 		<div class="footer">
-<div class="mobileads2"><center>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- MOBILE -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-4882649856459352"
-     data-ad-slot="7924704028"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div></center>
-<div class="mobileads1"><center>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- long -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-4882649856459352"
-     data-ad-slot="7449265221"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</center></div>
 </div>
 <script src="lib/promap.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
 
 </body>
