--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         }
 	      .footer {
 		      z-index: 1000 !important;
+		      width: 40%;
 	      }
 		#header > center {
 		display: none;}
