--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 	      }
 		#header > center {
 		display: none;}
-
+#header {
+	position: fixed !important;
+	      }
     #window {
     color: black !important;
     display: block;
