--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 		   .sidebar {
             width: 300px;
         }
+
+	      #sidebar {
+		      margin-top: 8.5em !important;
+	      }
 	      .footer {
 		      z-index: 1000 !important;
 		      width: 40%;
