--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 		   .sidebar {
             width: 300px;
         }
-	      @media only screen and (max-device-width: 480px)
+	      @media only screen and (max-device-width: 480px) {
 #pac-input {
     width: 290px !important;
     margin-left: 15px;
 }
+	      }
 
 	      #sidebar {
 		      margin-top: 9.5em !important;
