--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <p style="
     font-size: 15px;
 margin-top: -30px;
-"><b><a href="#">Donate to get your area scanned click here for more info</a><br>Support us by sharing our website or donating.</b><br><br>
+"><b><a href="#">Click here for more info about donating to have your area scanned.</a><br>Support us by sharing our website or donating.</b><br><br>
         <hr style="
     margin-top: -20px;
     margin-bottom: 10px;
