--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	      @media only screen and (max-device-width: 480px) {
 #pac-input {
     width: 290px !important;
+	    margin-top: -18px !important;
     margin-left: 15px;
 }
 	      }
