--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.ie.css" />
     <![endif]-->
       <style>
+	      @media only screen and (max-device-width: 480px) and (min-device-width: 320px) {
+.footer {
+    width: 100% !important;
+}
+	      }
 	 
         html, body, #map{ height: 100%; padding: 0; margin: 0;}
 		   .sidebar {
