--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.ie.css" />
     <![endif]-->
       <style>
+	      .sidebar-tabs {
+		      background-color: rgba(255, 255, 255, 0.47);
+}
 	      #map {
 		      margin-top: -35px;
 	      }
