--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.ie.css" />
     <![endif]-->
       <style>
+	     
 	      .sidebar-tabs {
 		      background-color: rgba(255, 255, 255, 0.47);
 }
 	      #map {
-		      margin-top: -35px;
+		      margin-top: -35px !important;
 	      }
 	      @media only screen and (max-device-width: 480px) and (min-device-width: 0px) {
 .footer {
