--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.ie.css" />
     <![endif]-->
       <style>
-	     
+	     .leaflet-bar {
+    box-shadow: none !important;
+	      }
+	      .leaflet-bar a {
+    width: 32px !important;
+    height: 32px !important;
+    font-size: 18px !important;
+	      }
 	      .sidebar-tabs {
 		      background-color: rgba(255, 255, 255, 0.47);
 }
