--- a/stats.html
+++ b/stats.html
@@ -92,6 +92,18 @@ ga('send', 'pageview');
       height: 350px;
     }
     @media only screen and (max-device-width: 480px) {
+	    #header > div > h1 > a {
+		    display: none;
+	    }
+	    #header > h6 {
+		        font-size: 14px;
+    position: absolute;
+    margin-left: -56%;
+	    }
+	    #pokeIDChoice {
+		    position: absolute;
+    margin-left: -50px;
+}
       #pac-input {
         margin-top:-10px
       }
