--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ margin-top: -30px;
       <h2>WPM  Is Offline from 12AM - 8AM EST every night</h2>
       <p>Scans will automatically turn off / on at those times</p>
       
-      <p>Are captcha costs alone are $30-40 daily, help us continue our service and expand areas by donating</a></p>
+      <p>Our captcha costs alone are $30-40 daily, help us continue our service and expand areas by donating</a></p>
       
      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
