--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 	    margin-top: -18px !important;
     margin-left: 15px;
 }
+		      .maintenance .maint-message { 
+			      margin-top: 40%;
+		      }
 	      }
 
 	      #sidebar {
