--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ margin-top: -30px;
 "></i>
         </button>
     </div>
-	<div class="maintenance" style="">
+	<div class="maintenance" style="display: none;">
     <div class="maint-message">
       <h2>WPM  Is Offline from 12AM - 8AM EST every night</h2>
       <p>Scans will automatically turn off / on at those times</p>
