--- a/pro.html
+++ b/pro.html
@@ -214,6 +214,18 @@ ga('send', 'pageview');
           </div>
           <div class="checkbox">
             <label>
+              <input type="checkbox" data-toggle="toggle" id="gymsToggle">
+              Gyms
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" data-toggle="toggle" id="lowDataToggle">
+              Low Data
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
               <input type="checkbox" data-toggle="toggle" id="ultraRareToggle">
               Ultra Rare
             </label>
