CSS added for Gym Pokemon CP

--- a/pro.html
+++ b/pro.html
@@ -117,6 +117,27 @@ ga('send', 'pageview');
     .select2 {
       width: 200px !important
     }
+    .cp {
+    display: block;
+    border-radius: 5px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: .85em;
+    }
+  .team-1 {
+    background-color: #4A8ACA;
+    color: #fff;
+  }
+
+  .team-2 {
+    background-color: #F0443A;
+    color: #fff;
+  }
+
+  .team-3 {
+    background-color: #FED928;
+    color: #000;
+  }
 
     </style>
     <script src="lib/jquery-3.1.1.min.js"></script>
