--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ margin-top: -30px;
 </center></div>
 </div>
 <script src="lib/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpCeRBeEpZ80e8uQDqHjwh7JlTz6cFQnY&libraries=places&callback=initSearch"></script>
 
 
 </body>
