--- a/pro.html
+++ b/pro.html
@@ -335,6 +335,6 @@ ga('send', 'pageview');
   Spent Today: $<span class = "captchaRate"></span>
 </div>
 <script src="lib/promap.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpCeRBeEpZ80e8uQDqHjwh7JlTz6cFQnY&libraries=places&callback=initSearch"></script>
 
 </body>
