--- a/stats.html
+++ b/stats.html
@@ -266,6 +266,6 @@ margin-top: -30px;
   <div id="map" class="sidebar-map"></div>
 </div>
 <script src="lib/stats.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initSearch"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpCeRBeEpZ80e8uQDqHjwh7JlTz6cFQnY&libraries=places&callback=initSearch"></script>
 
 </body>
